--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,3 +1,5 @@
-// $navbar-default-link-color: #000;
-// $font-size-base: 20px !default;
-$body-bg: #000 !default;
+$navbar-inverse-bg : #1F1D25;
+@font-face {
+    font-family: slkscr;
+    src: url('/fonts/PressStart2P.ttf');
+}
