--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -35,8 +35,8 @@ $navbar-inverse-bg : #1F1D25;
 
 footer.footer-site {
     position: fixed;
-    background-color: rgb(24, 194, 169);
-    height: 200px;
+    background-color: #1F1D25;
+    height: 160px;
     width: 100%;
     bottom: 0;
 }
